@@ -1,8 +1,12 @@
+2010-03-14  Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V00-06-00
+	* subclassing PrescaleService from SaveConfiguration class to save
+	its configuration in the provenance (reverts V00-05-08).
+
 2010-03-12  Martin Grunewald  <Martin.Grunewald@cern.ch>
 	* tag V00-05-08
 	* adding special service class parameter "saveToConfig_"
 	to cfi.py file ONLY(!)
-
 
 2010-02-17  Martin Grunewald  <Martin.Grunewald@cern.ch>
 	* tag V00-05-06
